# jibe

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml
android/: README.md  settings.gradle.kts
daemon/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
daemon/jibe/: __init__.py  api.py  auth.py  cli.py  clipboard.py  config.py  connection.py  db.py  discovery.py  server.py  tls.py
daemon/jibe/core/: api.py  auth.py  auth_jwt.py  config.py  db.py  desktop_env.py  ports.py  tls.py  user_data.py
daemon/jibe/handlers/: battery.py  clipboard.py  device_features.py  notifications.py  ping.py  pong.py  remote.py  ring.py  router.py  transfer.py
daemon/jibe/network/: connection.py  dashboard_event_log.py  discovery.py  ping_activity.py  ping_probe.py  server.py
daemon/jibe/ui/: __init__.py  icons.py  tray.py
daemon/jibe/web/static/: index.html
daemon/jibe/web/static/css/: theme.css
daemon/jibe/web/static/js/: api.js  auth.js
daemon/tests/: conftest.py  test_api.py  test_auth.py  test_auth_jwt.py  test_battery.py  test_cli.py  test_clipboard.py  test_connection.py  test_db.py  test_desktop_env.py  test_discovery.py  test_icons.py  test_integration_tls.py  test_notifications.py  test_ports.py  test_remote.py  test_rest_api.py  test_rest_crud.py  test_rest_daemon.py  test_rest_settings.py  test_ring.py  test_router.py  test_server.py  test_tls.py  test_transfer.py  test_tray.py  test_user_data.py
daemon/tests/fixtures/: messages.json
daemon/web/static/: dashboard.html  index.html
daemon/web/static/css/: theme.css
daemon/web/static/js/: app.js  i18n.js
deploy/: install.sh  jibe.desktop  jibe.service  reset-data.sh  uninstall.sh  ydotoold.service
docs/: architecture.md  flows.md  protocol.md  (+1 more)
(+52 files in other folders)
