[project]
name = "jibe"
version = "0.9.0-pre"
description = "Seamless Android and Linux integration over LAN. No cloud, no cables, no extra clients."
readme = "README.md"
license = { file = "../LICENSE" }
authors = [{ name = "Jibe contributors" }]
requires-python = ">=3.13"
keywords = ["android", "linux", "lan", "clipboard", "notifications", "self-hosted"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: System :: Networking",
]
dependencies = [
    "aiohttp>=3.11",
    "zeroconf>=0.146",
    "aiosqlite>=0.21",
    "cryptography>=42",
    "pyperclip>=1.9",
    "PyJWT>=2.10",
    "bcrypt>=4.3",
    "pystray>=0.19",
    "Pillow>=11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-aiohttp>=1.1",
    "pytest-asyncio>=1.3",
]

[project.scripts]
jibe = "jibe.cli:main"

[project.urls]
Homepage = "https://github.com/gobbledyglomp/jibe"
Repository = "https://github.com/gobbledyglomp/jibe"
Issues = "https://github.com/gobbledyglomp/jibe/issues"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["jibe*"]

[tool.setuptools.package-data]
"jibe" = ["web/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
